fixed responsive text align

--- a/styles/style.css
+++ b/styles/style.css
@@ -318,12 +318,14 @@ Mobile Device
     }
     .upcoming-detail h2{
         width: 100%;
-        font-size: 18px;
-        float: right;
+        font-size: 14px;
+        margin-left: 0;
+        text-align: center;
     }
     .upcoming-detail p {
         width: 100%;
-        float: right;
+        margin-left: 0;
+        text-align: center;
     }
         /* ==============
     footer section 
